--- a/app/view/base.html
+++ b/app/view/base.html
@@ -20,7 +20,9 @@
 {% block footer %}
 {% endblock %}
 
-{% block baseJs %} {% endblock %}
+{% block baseJs %} 
+<script type="text/javascript" src="js/lib/jquery-42d1f3671d.js"></script>
+{% endblock %}
 {% block pageJs %} {% endblock %}
 </body>
 </html>
