--- a/app/view/index/index.html
+++ b/app/view/index/index.html
@@ -3,3 +3,7 @@
 {% block content %}
   hello {{ mockdata }}
 {% endblock %}
+
+{% block pageJs %} 
+<script type="text/javascript" src="js/page/index/index-135b8055da.js"></script>
+{% endblock %}
