--- a/app/view/index/index.html
+++ b/app/view/index/index.html
@@ -1,9 +1,13 @@
 {% extends "../base.html" %}
 
+{% block pageCss %}
+<link rel="stylesheet" href="css/page/index-ed263c09e4.css" />
+{% endblock %}
+
 {% block content %}
   hello {{ mockdata }}
 {% endblock %}
 
 {% block pageJs %} 
-<script type="text/javascript" src="js/page/index/index-135b8055da.js"></script>
+<script type="text/javascript" src="js/page/index/index-747afff985.js"></script>
 {% endblock %}
