--- a/app/view/index/index.html
+++ b/app/view/index/index.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block content %}
-  hello {{ mockdata }}
+  hello {{ mockdata }} !!!
 {% endblock %}
 
 {% block pageJs %} 
-<script type="text/javascript" src="js/page/index/index-747afff985.js"></script>
+<script type="text/javascript" src="js/page/index/index-bbe5a64ddf.js"></script>
 {% endblock %}
