--- a/app/view/index/index.html
+++ b/app/view/index/index.html
@@ -1,11 +1,11 @@
 {% extends "../base.html" %}
 
 {% block pageCss %}
-<link rel="stylesheet" href="css/page/index-ed263c09e4.css" />
+<link rel="stylesheet" href="css/page/index-8bb2c7a3e9.css" />
 {% endblock %}
 
 {% block content %}
-  hello {{ mockdata }} !!!
+  hello {{ mockdata }} !!!!~~~12
 {% endblock %}
 
 {% block pageJs %} 
