--- a/app/view/index/index.html
+++ b/app/view/index/index.html
@@ -1,11 +1,11 @@
 {% extends "../base.html" %}
 
 {% block pageCss %}
-<link rel="stylesheet" href="css/page/index-8bb2c7a3e9.css" />
+<link rel="stylesheet" href="css/page/index-077908279d.css" />
 {% endblock %}
 
 {% block content %}
-  hello {{ mockdata }} !!!!~~~12
+  hello {{ mockdata }} !!!!~~~
 {% endblock %}
 
 {% block pageJs %} 
