--- a/src/app/view/index/index.html
+++ b/src/app/view/index/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  hello {{ mockdata }} !!!!~~~123
+  hello {{ mockdata }} !!!!~~~
 {% endblock %}
 
 {% block pageJs %} 
