--- a/src/app/view/base.html
+++ b/src/app/view/base.html
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block baseJs %} 
-<script type="text/javascript" src="js/lib/jquery.js"></script>
+<script type="text/javascript" src="/js/lib/jquery.js"></script>
 {% endblock %}
 {% block pageJs %} {% endblock %}
 </body>
