--- a/src/app/view/index/index.html
+++ b/src/app/view/index/index.html
@@ -1,13 +1,13 @@
 {% extends "../base.html" %}
 
 {% block pageCss %}
-<link rel="stylesheet" href="css/page/index.css" />
+<link rel="stylesheet" href="/css/page/index.css" />
 {% endblock %}
 
 {% block content %}
-  hello {{ mockdata }} !!!!~~~
+  hello {{ mockdata }} !!!!~~~111222
 {% endblock %}
 
 {% block pageJs %} 
-<script type="text/javascript" src="js/page/index/index.js"></script>
+<script type="text/javascript" src="/js/page/index/index.js"></script>
 {% endblock %}
